argo-helm/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - host: springboot.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rollout-bluegreen-active
            port:
              number: 80
  - host: preview.springboot.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rollout-bluegreen-preview
            port:
              number: 80
